refactor: getting the teams in a course now also returns the value of the key associated with that course